# bioscratch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  skills-lock.json  typora_like (called Jottingdown)_mvp_dev_spec.md
.claude/: settings.json
.claude/commands/: tauri-debug.md
.github/workflows/: deploy-landing.yml  no-claude-coauthor.yml
app/: .gitignore  index.html  package-lock.json  package.json  preview.html  vite.preview.config.ts
app/scripts/: build-quicklook.sh  release-macos.sh  test-frontmatter.mts
app/src/: App.tsx
app/src-tauri/: .gitignore  Cargo.toml  extra-info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/android/values/: ic_launcher_background.xml
app/src-tauri/quicklook/: Extension.entitlements  Info.plist  PreviewViewController.swift
app/src-tauri/src/: dev_bridge.rs  lib.rs  main.rs
app/src/components/: CloseDocumentDialog.tsx  EditorSurface.tsx  LargeFileDialog.tsx  RecentFilesDialog.tsx  RecoveryDialog.tsx  SearchBar.tsx  StatusBar.tsx  TabBar.tsx  ThemeSelector.tsx  Toolbar.tsx  UpdateDialog.tsx
app/src/editor/: schema.ts
app/src/hooks/: useAutosave.ts  useDocumentState.ts  useRecentFiles.ts  useTheme.ts
app/src/lib/: closeFlow.ts  export.ts  frontmatter.ts  imagePaths.ts  math.ts  themeLoader.ts
app/src/preview/: main.tsx
app/src/styles/: app.css  editor.css  markdown.css
app/src/themes/: ant_light.yaml  apple_light.yaml  atlassian_light.yaml  audi_dark.yaml  audi_light.yaml  bbc_dark.yaml  biorouter_dark.yaml  biorouter_light.yaml  dark.yaml  github_dark.yaml  ibm_dark.yaml  ibm_light.yaml  mailchimp_light.yaml  material_light.yaml  medium_light.yaml  nasa_light.yaml  spotify_dark.yaml  spotify_light.yaml  twitter_dark.yaml
app/tests/: closeAndRecent.test.tsx  inlineCode.test.ts  markdownPaste.test.ts  markdownTables.test.ts  nestedLists.test.ts  recentFilesBroadcast.test.tsx
docs/: frontmatter-banner.md  pdf-export.md
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
extension/src/: editorProvider.ts  extension.ts
extension/src/webview/: App.tsx  bridge.ts  declarations.d.ts
landing/: CLAUDE.md  README.md  index.html
notarization/: notarization.md
release/: RELEASE_NOTES_0.4.0.md  bioscratch-0.4.0.vsix
release-notes/: v0.5.0.md
tests/fixtures/: basic.md  code.md  code_only.md  images.md  math.md  mermaid.md  mixed.md  plain.txt  sample.R  sample.jl  sample.py  sample.ts  table.md
tests/fixtures/frontmatter/: 01-templater.md  02-obsidian.md  03-hugo-nested.md  04-pandoc-authors.md  05-quarto-deep.md  06-jekyll.md  (+3 more)
(+49 files in other folders)
