[package]
name = "bioscratch"
version = "0.1.0"
description = "Bioscratch - WYSIWYG Markdown Editor"
authors = ["Bioscratch"]
edition = "2021"

[lib]
name = "bioscratch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
