[package]
name = "bioscratch"
version = "0.2.0"
description = "Bioscratch - WYSIWYG Markdown Editor"
authors = ["Bioscratch"]
edition = "2021"

[lib]
name = "bioscratch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-debug-bridge = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
scopeguard = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
debug-bridge = ["tauri-plugin-debug-bridge"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
